tests/frontend_syntax/invalid/bad_type_pattern.vit
space vitte/compiler/frontend/tests

type Broken = [int;

proc broken(value: int) -> int {
  match value {
    case Pair { left: } => give 1;
    else => give 0;
  }
}
